added emailServiceFacorty Test, and fixed tests for FilePathAttachment

--- a/Email.NET.Test/Email.NET.Test.csproj
+++ b/Email.NET.Test/Email.NET.Test.csproj
@@ -23,4 +23,10 @@
     <ProjectReference Include="..\Email.NET\Email.NET.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="test_file.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
