--- a/src/Email.NET.MailKit/Email.NET.MailKit.csproj
+++ b/src/Email.NET.MailKit/Email.NET.MailKit.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,6 +6,10 @@
   
   <ItemGroup>
     <PackageReference Include="MailKit" Version="2.10.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Email.NET\Email.NET.csproj" />
   </ItemGroup>
   
 </Project>
