--- a/src/Email.NET.SendGrid/Email.NET.SendGrid.csproj
+++ b/src/Email.NET.SendGrid/Email.NET.SendGrid.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,6 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="Sendgrid" Version="9.22.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Email.NET\Email.NET.csproj" />
   </ItemGroup>
   
 </Project>
