--- a/src/Email.NET.SendGrid/Email.NET.SendGrid.csproj
+++ b/src/Email.NET.SendGrid/Email.NET.SendGrid.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Sendgrid" Version="9.22.0" />
+    <PackageReference Include="SendGrid" Version="9.22.0" />
   </ItemGroup>
 
   <ItemGroup>
