--- a/tests/Email.NET.Test/Email.NET.Test.csproj
+++ b/tests/Email.NET.Test/Email.NET.Test.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Email.NET\Email.NET.csproj" />
+    <ProjectReference Include="..\..\src\Core\Email.NET\Email.NET.csproj" />
   </ItemGroup>
 
   <ItemGroup>
