--- a/src/Core/Email.NET/Email.NET.csproj
+++ b/src/Core/Email.NET/Email.NET.csproj
@@ -19,7 +19,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\assets\logo.png">
+    <None Include="..\..\..\assets\logo.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
