--- a/src/DependencyInjection/Email.NET.DependencyInjection/Email.NET.DependencyInjection.csproj
+++ b/src/DependencyInjection/Email.NET.DependencyInjection/Email.NET.DependencyInjection.csproj
@@ -3,13 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
+  
   <ItemGroup>
-    <PackageReference Include="SocketLabs.EmailDelivery" Version="1.2.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
-
+  
   <ItemGroup>
-    <ProjectReference Include="..\Email.NET\Email.NET.csproj" />
+    <ProjectReference Include="..\..\Core\Email.NET\Email.NET.csproj" />
   </ItemGroup>
-
+  
 </Project>
