--- a/src/DependencyInjection/Email.NET.MailKit.DependencyInjection/Email.NET.MailKit.DependencyInjection.csproj
+++ b/src/DependencyInjection/Email.NET.MailKit.DependencyInjection/Email.NET.MailKit.DependencyInjection.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\EmailDeliveryProviders\Email.NET.MailKit\Email.NET.MailKit.csproj" />
     <ProjectReference Include="..\Email.NET.DependencyInjection\Email.NET.DependencyInjection.csproj" />
-    <ProjectReference Include="..\Email.NET.Mailgun\Email.NET.Mailgun.csproj" />
   </ItemGroup>
 
 </Project>
