--- a/src/EmailDeliveryProviders/Email.NET.MailKit/Email.NET.MailKit.csproj
+++ b/src/EmailDeliveryProviders/Email.NET.MailKit/Email.NET.MailKit.csproj
@@ -3,13 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="SendGrid" Version="9.22.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Email.NET\Email.NET.csproj" />
-  </ItemGroup>
   
+  <ItemGroup>
+    <PackageReference Include="MailKit" Version="2.10.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Email.NET\Email.NET.csproj" />
+  </ItemGroup>
+
 </Project>
