--- a/samples/Email.NET.Samples.ASPCore/Email.NET.Samples.ASPCore.csproj
+++ b/samples/Email.NET.Samples.ASPCore/Email.NET.Samples.ASPCore.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\DependencyInjection\Email.NET.AmazonSES.DependencyInjection\Email.NET.AmazonSES.DependencyInjection.csproj" />
+    <ProjectReference Include="..\..\src\DependencyInjection\Email.NET.Mailgun.DependencyInjection\Email.NET.Mailgun.DependencyInjection.csproj" />
+    <ProjectReference Include="..\..\src\DependencyInjection\Email.NET.MailKit.DependencyInjection\Email.NET.MailKit.DependencyInjection.csproj" />
+    <ProjectReference Include="..\..\src\DependencyInjection\Email.NET.SendGrid.DependencyInjection\Email.NET.SendGrid.DependencyInjection.csproj" />
+    <ProjectReference Include="..\..\src\DependencyInjection\Email.NET.Socketlabs.DependencyInjection\Email.NET.Socketlabs.DependencyInjection.csproj" />
+  </ItemGroup>
+
 </Project>
