--- a/samples/Email.NET.Samples.Console/Email.NET.Samples.Console.csproj
+++ b/samples/Email.NET.Samples.Console/Email.NET.Samples.Console.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\EmailDeliveryProviders\Email.NET.AmazonSES\Email.NET.AmazonSES.csproj" />
+    <ProjectReference Include="..\..\src\EmailDeliveryProviders\Email.NET.Mailgun\Email.NET.Mailgun.csproj" />
+    <ProjectReference Include="..\..\src\EmailDeliveryProviders\Email.NET.MailKit\Email.NET.MailKit.csproj" />
+    <ProjectReference Include="..\..\src\EmailDeliveryProviders\Email.NET.SendGrid\Email.NET.SendGrid.csproj" />
+    <ProjectReference Include="..\..\src\EmailDeliveryProviders\Email.NET.Socketlabs\Email.NET.Socketlabs.csproj" />
+  </ItemGroup>
+
 </Project>
