--- a/src/DependencyInjection/Email.NET.DependencyInjection/Email.NET.DependencyInjection.csproj
+++ b/src/DependencyInjection/Email.NET.DependencyInjection/Email.NET.DependencyInjection.csproj
@@ -4,6 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   
+  <PropertyGroup>
+    <Title>Email.Net</Title>
+    <PackageId>Email.NET.DependencyInjection</PackageId>
+    <Description>An email sender abstraction for .NET to decouple your email sending from the underlying provider, with access to different types of providers such as MailKit, SendGrid, MailGun, etc.</Description>
+  </PropertyGroup>
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
