--- a/src/DependencyInjection/Email.NET.SendGrid.DependencyInjection/Email.NET.SendGrid.DependencyInjection.csproj
+++ b/src/DependencyInjection/Email.NET.SendGrid.DependencyInjection/Email.NET.SendGrid.DependencyInjection.csproj
@@ -3,7 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
+  
+  <PropertyGroup>
+    <Title>Email.Net - SendGrid EDP</Title>
+    <PackageId>Email.NET.SendGrid.DependencyInjection</PackageId>
+    <Description>SendGrid email delivery provider for Email.Net.</Description>
+  </PropertyGroup>
+  
   <ItemGroup>
     <ProjectReference Include="..\..\EmailDeliveryProviders\Email.NET.SendGrid\Email.NET.SendGrid.csproj" />
     <ProjectReference Include="..\Email.NET.DependencyInjection\Email.NET.DependencyInjection.csproj" />
