--- a/src/EmailDeliveryProviders/Email.NET.MailKit/Email.NET.MailKit.csproj
+++ b/src/EmailDeliveryProviders/Email.NET.MailKit/Email.NET.MailKit.csproj
@@ -3,7 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  
+
+  <PropertyGroup>
+    <Title>Email.Net - MailKit EDP</Title>
+    <PackageId>Email.NET.MailKit</PackageId>
+    <Description>MailKit email delivery provider for Email.Net.</Description>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="MailKit" Version="2.10.1" />
   </ItemGroup>
