--- a/src/EmailDeliveryProviders/Email.NET.SendGrid/Email.NET.SendGrid.csproj
+++ b/src/EmailDeliveryProviders/Email.NET.SendGrid/Email.NET.SendGrid.csproj
@@ -4,6 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <Title>Email.Net - SendGrid EDP</Title>
+    <PackageId>Email.NET.SendGrid</PackageId>
+    <Description>SendGrid email delivery provider for Email.Net.</Description>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="SendGrid" Version="9.22.0" />
   </ItemGroup>
