--- a/src/EmailDeliveryProviders/Email.NET.Socketlabs/Email.NET.Socketlabs.csproj
+++ b/src/EmailDeliveryProviders/Email.NET.Socketlabs/Email.NET.Socketlabs.csproj
@@ -4,6 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <Title>Email.Net - Socketlabs EDP</Title>
+    <PackageId>Email.NET.Socketlabs</PackageId>
+    <Description>Socketlabs Email delivery provider for Email.Net.</Description>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="SocketLabs.EmailDelivery" Version="1.2.3" />
   </ItemGroup>
