--- a/src/Core/Email.NET/Email.NET.csproj
+++ b/src/Core/Email.NET/Email.NET.csproj
@@ -10,4 +10,8 @@
     <Description>An email sender abstraction for .NET to decouple your email sending from the underlying provider, with access to different types of providers such as MailKit, SendGrid, MailGun, etc.</Description>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
+  </ItemGroup>
+
 </Project>
