--- a/src/DependencyInjection/Email.NET.DependencyInjection/Email.NET.DependencyInjection.csproj
+++ b/src/DependencyInjection/Email.NET.DependencyInjection/Email.NET.DependencyInjection.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\..\Core\Email.NET\Email.NET.csproj" />
   </ItemGroup>
   
+  <ItemGroup>
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
+  </ItemGroup>
+  
 </Project>
