--- a/src/EmailDeliveryProviders/Email.NET.MailKit/Email.NET.MailKit.csproj
+++ b/src/EmailDeliveryProviders/Email.NET.MailKit/Email.NET.MailKit.csproj
@@ -11,11 +11,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MailKit" Version="2.10.1" />
+    <PackageReference Include="MailKit" Version="2.15.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Email.NET\Email.NET.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
   </ItemGroup>
 
 </Project>
