--- a/src/EmailDeliveryProviders/Email.NET.SendGrid/Email.NET.SendGrid.csproj
+++ b/src/EmailDeliveryProviders/Email.NET.SendGrid/Email.NET.SendGrid.csproj
@@ -11,11 +11,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="SendGrid" Version="9.22.0" />
+    <PackageReference Include="SendGrid" Version="9.25.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Email.NET\Email.NET.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
   </ItemGroup>
 
 </Project>
