--- a/src/EmailDeliveryProviders/Email.NET.MailKit/Email.NET.MailKit.csproj
+++ b/src/EmailDeliveryProviders/Email.NET.MailKit/Email.NET.MailKit.csproj
@@ -7,6 +7,7 @@
   <PropertyGroup>
     <Title>Email.Net - MailKit EDP</Title>
     <PackageId>Email.NET.MailKit</PackageId>
+    <PackageTags>Email.Net; Emails; MailKit</PackageTags>
     <Description>MailKit email delivery provider for Email.Net.</Description>
   </PropertyGroup>
 
