--- a/src/DependencyInjection/Email.NET.Mailgun.DependencyInjection/Email.NET.Mailgun.DependencyInjection.csproj
+++ b/src/DependencyInjection/Email.NET.Mailgun.DependencyInjection/Email.NET.Mailgun.DependencyInjection.csproj
@@ -7,6 +7,7 @@
   <PropertyGroup>
     <Title>Email.Net - Mailgun EDP</Title>
     <PackageId>Email.NET.Mailgun.DependencyInjection</PackageId>
+    <PackageTags>Email.Net; Emails; SMTP; MailGun</PackageTags>
     <Description>Mailgun email delivery provider for Email.Net.</Description>
   </PropertyGroup>
 
