--- a/src/EmailDeliveryProviders/Email.NET.AmazonSES/Email.NET.AmazonSES.csproj
+++ b/src/EmailDeliveryProviders/Email.NET.AmazonSES/Email.NET.AmazonSES.csproj
@@ -7,6 +7,7 @@
   <PropertyGroup>
     <Title>Email.Net - AmazonSES EDP</Title>
     <PackageId>Email.NET.AmazonSES</PackageId>
+    <PackageTags>Email.Net; Emails; SMTP; AmazonSES</PackageTags>
     <Description>AmazonSES email delivery provider for Email.Net.</Description>
   </PropertyGroup>
 
