--- a/src/EmailDeliveryProviders/Email.NET.Socketlabs/Email.NET.Socketlabs.csproj
+++ b/src/EmailDeliveryProviders/Email.NET.Socketlabs/Email.NET.Socketlabs.csproj
@@ -7,6 +7,7 @@
   <PropertyGroup>
     <Title>Email.Net - Socketlabs EDP</Title>
     <PackageId>Email.NET.Socketlabs</PackageId>
+    <PackageTags>Email.Net; Emails; Socketlabs;</PackageTags>
     <Description>Socketlabs Email delivery provider for Email.Net.</Description>
   </PropertyGroup>
 
