fix folder name, Linux is case sensitive with paths

--- a/src/EmailDeliveryProviders/Email.NET.Mailgun/Email.NET.Mailgun.csproj
+++ b/src/EmailDeliveryProviders/Email.NET.Mailgun/Email.NET.Mailgun.csproj
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Core\Email.Net\Email.Net.csproj" />
+    <ProjectReference Include="..\..\Core\Email.NET\Email.Net.csproj" />
   </ItemGroup>
 
   <ItemGroup>
