--- a/templates/Email.Net.EDP.Template/Email.Net.EDP.Template.csproj
+++ b/templates/Email.Net.EDP.Template/Email.Net.EDP.Template.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Core\Email.Net\Email.Net.csproj" />
+    <ProjectReference Include="..\..\src\Core\Email.NET\Email.Net.csproj" />
   </ItemGroup>
+
 
 </Project>
