--- a/tests/Email.NET.Test/Email.NET.Test.csproj
+++ b/tests/Email.NET.Test/Email.NET.Test.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Core\Email.Net\Email.Net.csproj" />
+    <ProjectReference Include="..\..\src\Core\Email.NET\Email.Net.csproj" />
   </ItemGroup>
 
   <ItemGroup>
