--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,30 +20,30 @@ jobs:
         run: dotnet build --configuration Release --no-restore
 
       - name: Pack Email.Net
-        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/Core/Email.NET/Email.NET.csproj -o .
-      - name: Pack Email.NET.Socketlabs
-        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/EmailDeliveryProviders/Email.NET.Socketlabs/Email.NET.Socketlabs.csproj -o .
-      - name: Pack Email.NET.SendGrid
-        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/EmailDeliveryProviders/Email.NET.SendGrid/Email.NET.SendGrid.csproj -o .
-      - name: Pack Email.NET.MailKit
-        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/EmailDeliveryProviders/Email.NET.MailKit/Email.NET.MailKit.csproj -o .
-      - name: Pack Email.NET.Mailgun
-        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/EmailDeliveryProviders/Email.NET.Mailgun/Email.NET.Mailgun.csproj -o .
-      - name: Pack Email.NET.AmazonSES
-        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/EmailDeliveryProviders/Email.NET.AmazonSES/Email.NET.AmazonSES.csproj -o .
+        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/Core/Email.NET/Email.Net.csproj -o .
+      - name: Pack Email.Net.Socketlabs
+        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/EmailDeliveryProviders/Email.NET.Socketlabs/Email.Net.Socketlabs.csproj -o .
+      - name: Pack Email.Net.SendGrid
+        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/EmailDeliveryProviders/Email.NET.SendGrid/Email.Net.SendGrid.csproj -o .
+      - name: Pack Email.Net.MailKit
+        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/EmailDeliveryProviders/Email.NET.MailKit/Email.Net.MailKit.csproj -o .
+      - name: Pack Email.Net.Mailgun
+        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/EmailDeliveryProviders/Email.NET.Mailgun/Email.Net.Mailgun.csproj -o .
+      - name: Pack Email.Net.AmazonSES
+        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/EmailDeliveryProviders/Email.NET.AmazonSES/Email.Net.AmazonSES.csproj -o .
 
       - name: Pack Email.Net.DependencyInjection
-        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/DependencyInjection/Email.NET.DependencyInjection/Email.NET.DependencyInjection.csproj -o .
-      - name: Pack Email.NET.Socketlabs.DependencyInjection
-        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/DependencyInjection/Email.NET.Socketlabs.DependencyInjection/Email.NET.Socketlabs.DependencyInjection.csproj -o .
-      - name: Pack Email.NET.SendGrid.DependencyInjection
-        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/DependencyInjection/Email.NET.SendGrid.DependencyInjection/Email.NET.SendGrid.DependencyInjection.csproj -o .
-      - name: Pack Email.NET.MailKit.DependencyInjection
-        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/DependencyInjection/Email.NET.MailKit.DependencyInjection/Email.NET.MailKit.DependencyInjection.csproj -o .
-      - name: Pack Email.NET.Mailgun.DependencyInjection
-        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/DependencyInjection/Email.NET.Mailgun.DependencyInjection/Email.NET.Mailgun.DependencyInjection.csproj -o .
-      - name: Pack Email.NET.AmazonSES.DependencyInjection
-        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/DependencyInjection/Email.NET.AmazonSES.DependencyInjection/Email.NET.AmazonSES.DependencyInjection.csproj -o .
+        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/DependencyInjection/Email.NET.DependencyInjection/Email.Net.DependencyInjection.csproj -o .
+      - name: Pack Email.Net.Socketlabs.DependencyInjection
+        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/DependencyInjection/Email.NET.Socketlabs.DependencyInjection/Email.Net.Socketlabs.DependencyInjection.csproj -o .
+      - name: Pack Email.Net.SendGrid.DependencyInjection
+        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/DependencyInjection/Email.NET.SendGrid.DependencyInjection/Email.Net.SendGrid.DependencyInjection.csproj -o .
+      - name: Pack Email.Net.MailKit.DependencyInjection
+        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/DependencyInjection/Email.NET.MailKit.DependencyInjection/Email.Net.MailKit.DependencyInjection.csproj -o .
+      - name: Pack Email.Net.Mailgun.DependencyInjection
+        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/DependencyInjection/Email.NET.Mailgun.DependencyInjection/Email.Net.Mailgun.DependencyInjection.csproj -o .
+      - name: Pack Email.Net.AmazonSES.DependencyInjection
+        run: dotnet pack --include-symbols -p:SymbolPackageFormat=snupkg --no-build -c Release src/DependencyInjection/Email.NET.AmazonSES.DependencyInjection/Email.Net.AmazonSES.DependencyInjection.csproj -o .
 
       - name: Push packages
         run: dotnet nuget push *.nupkg --api-key ${{secrets.NUGET_KEY}} --source https://api.nuget.org/v3/index.json --skip-duplicate
