--- a/samples/Email.NET.Samples.ASPCore/Email.NET.Samples.ASPCore.csproj
+++ b/samples/Email.NET.Samples.ASPCore/Email.NET.Samples.ASPCore.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\DependencyInjection\Email.Net.AmazonSES.DependencyInjection\Email.Net.AmazonSES.DependencyInjection.csproj" />
-    <ProjectReference Include="..\..\src\DependencyInjection\Email.Net.Mailgun.DependencyInjection\Email.Net.Mailgun.DependencyInjection.csproj" />
-    <ProjectReference Include="..\..\src\DependencyInjection\Email.Net.MailKit.DependencyInjection\Email.Net.MailKit.DependencyInjection.csproj" />
-    <ProjectReference Include="..\..\src\DependencyInjection\Email.Net.SendGrid.DependencyInjection\Email.Net.SendGrid.DependencyInjection.csproj" />
-    <ProjectReference Include="..\..\src\DependencyInjection\Email.Net.Socketlabs.DependencyInjection\Email.Net.Socketlabs.DependencyInjection.csproj" />
+    <ProjectReference Include="..\..\src\DependencyInjection\Email.NET.AmazonSES.DependencyInjection\Email.Net.AmazonSES.DependencyInjection.csproj" />
+    <ProjectReference Include="..\..\src\DependencyInjection\Email.NET.Mailgun.DependencyInjection\Email.Net.Mailgun.DependencyInjection.csproj" />
+    <ProjectReference Include="..\..\src\DependencyInjection\Email.NET.MailKit.DependencyInjection\Email.Net.MailKit.DependencyInjection.csproj" />
+    <ProjectReference Include="..\..\src\DependencyInjection\Email.NET.SendGrid.DependencyInjection\Email.Net.SendGrid.DependencyInjection.csproj" />
+    <ProjectReference Include="..\..\src\DependencyInjection\Email.NET.Socketlabs.DependencyInjection\Email.Net.Socketlabs.DependencyInjection.csproj" />
   </ItemGroup>
 
 </Project>
