--- a/src/DependencyInjection/Email.NET.AmazonSES.DependencyInjection/Email.NET.AmazonSES.DependencyInjection.csproj
+++ b/src/DependencyInjection/Email.NET.AmazonSES.DependencyInjection/Email.NET.AmazonSES.DependencyInjection.csproj
@@ -12,8 +12,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\EmailDeliveryProviders\Email.Net.AmazonSES\Email.Net.AmazonSES.csproj" />
-    <ProjectReference Include="..\Email.Net.DependencyInjection\Email.Net.DependencyInjection.csproj" />
+    <ProjectReference Include="..\..\EmailDeliveryProviders\Email.NET.AmazonSES\Email.Net.AmazonSES.csproj" />
+    <ProjectReference Include="..\Email.NET.DependencyInjection\Email.Net.DependencyInjection.csproj" />
   </ItemGroup>
 
   <ItemGroup>
