--- a/src/DependencyInjection/Email.NET.MailKit.DependencyInjection/Email.NET.MailKit.DependencyInjection.csproj
+++ b/src/DependencyInjection/Email.NET.MailKit.DependencyInjection/Email.NET.MailKit.DependencyInjection.csproj
@@ -12,8 +12,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\EmailDeliveryProviders\Email.Net.MailKit\Email.Net.MailKit.csproj" />
-    <ProjectReference Include="..\Email.Net.DependencyInjection\Email.Net.DependencyInjection.csproj" />
+    <ProjectReference Include="..\..\EmailDeliveryProviders\Email.NET.MailKit\Email.Net.MailKit.csproj" />
+    <ProjectReference Include="..\Email.NET.DependencyInjection\Email.Net.DependencyInjection.csproj" />
   </ItemGroup>
 
   <ItemGroup>
