--- a/src/DependencyInjection/Email.NET.SendGrid.DependencyInjection/Email.NET.SendGrid.DependencyInjection.csproj
+++ b/src/DependencyInjection/Email.NET.SendGrid.DependencyInjection/Email.NET.SendGrid.DependencyInjection.csproj
@@ -12,8 +12,8 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\..\EmailDeliveryProviders\Email.Net.SendGrid\Email.Net.SendGrid.csproj" />
-    <ProjectReference Include="..\Email.Net.DependencyInjection\Email.Net.DependencyInjection.csproj" />
+    <ProjectReference Include="..\..\EmailDeliveryProviders\Email.NET.SendGrid\Email.Net.SendGrid.csproj" />
+    <ProjectReference Include="..\Email.NET.DependencyInjection\Email.Net.DependencyInjection.csproj" />
   </ItemGroup>
   
   <ItemGroup>
