--- a/src/EmailDeliveryProviders/Email.NET.AmazonSES/Email.NET.AmazonSES.csproj
+++ b/src/EmailDeliveryProviders/Email.NET.AmazonSES/Email.NET.AmazonSES.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Core\Email.Net\Email.Net.csproj" />
+    <ProjectReference Include="..\..\Core\Email.NET\Email.Net.csproj" />
   </ItemGroup>
 
   <ItemGroup>
